tests/neg/i10970.scala
import scala.annotation.tailrec

@tailrec inline def foo() = ??? // error
